tests/ui/fail/multiple-attributes.stderr
error: Expected only single #[variant_compare = "..."] attribute
 --> tests/ui/fail/multiple-attributes.rs:6:7
  |
6 |     #[variant_compare = "nonsense2"]
  |       ^^^^^^^^^^^^^^^
